<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensor App</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start the Timer</string>
    <string name="label">Enter the timer units in seconds</string>
    <string name="stop">Stop the Torch</string>
    <string name="close">Close</string>
    <string name="ten">10</string>

</resources>
